# cpp-multi-platform-mgr

./: .gitignore  .gitlab-ci.yml  .my-gitlab-ci.yml  LICENSE  README  build.gradle  gradlew  gradlew.bat  settings.gradle  template.properties
gradle/repositories/gradle-cmake-plugin/net/freudasoft/gradle-cmake-plugin/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1
gradle/repositories/gradle-cmake-plugin/net/freudasoft/gradle-cmake-plugin/19.199.3/: gradle-cmake-plugin-19.199.3-javadoc.jar.md5  gradle-cmake-plugin-19.199.3-javadoc.jar.sha1  gradle-cmake-plugin-19.199.3-sources.jar.md5  gradle-cmake-plugin-19.199.3-sources.jar.sha1  gradle-cmake-plugin-19.199.3.jar.md5  gradle-cmake-plugin-19.199.3.jar.sha1  gradle-cmake-plugin-19.199.3.pom  gradle-cmake-plugin-19.199.3.pom.md5  gradle-cmake-plugin-19.199.3.pom.sha1
gradle/wrapper/: gradle-wrapper.properties
projects/: .gitignore  CMakeLists.txt
projects/cmake/: env_detect.cmake
projects/cmake-modules/: env_detect.cmake  test-neon.txt  test-static.txt
projects/projects/test/: CMakeLists.txt  main.cpp
src/: .clang-format  .gitignore  CMakeLists.txt
src/cmake/: env_detect.cmake
targets/android/: .gitignore  CMakeLists.txt  build.gradle
targets/linux/: CMakeLists.txt  build.gradle  cross.toolchain.example.cmake
targets/windows/: CMakeLists.txt  build.gradle
targets/windows-mingw/: CMakeLists.txt  build.gradle  toolchain-mingw64.cmake
tools/format/: build.gradle  format.bat  format.sh
tools/java-8-openjdk-amd64/lib/: jexec  jvm-amd64.cfg
tools/java-8-openjdk-amd64/lib/security/: cacerts  java.policy  java.security
