CMAKE_MINIMUM_REQUIRED(VERSION 3.13)

PROJECT(cpp-multi-platform-mgr)

OPTION(GENERATE_LIB_OR_BIN "生成动态库或可执行文件，ON为LIB" ON)

if(DEFINED CUSTOM_PLATFORM AND NOT DEFINED PLATFORM)
    set(PLATFORM "${CUSTOM_PLATFORM}")
endif(DEFINED CUSTOM_PLATFORM AND NOT DEFINED PLATFORM)

ADD_SUBDIRECTORY(../../projects projects)
