CMAKE_MINIMUM_REQUIRED(VERSION 3.13)
set(CMAKE_SYSTEM_VERSION "10.0.14393.0" CACHE STRING INTERNAL FORCE)
set(CMAKE_VS_WINDOWS_TARGET_PLATFORM_VERSION "10.0.14393.0" CACHE STRING INTERNAL FORCE)

PROJECT(cpp-multi-platform-mgr)

OPTION(GENERATE_LIB_OR_BIN "生成动态库或可执行文件，ON为LIB" ON)

SET(CMAKE_GENERATOR_TOOLSET v140_xp CACHE STRING "Windows仅支持在v140_xp下编译")

ADD_SUBDIRECTORY(../../projects projects)